--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,6 +67,7 @@
             android:layout_height="wrap_content"/>
 
         <TextView
+            android:onClick="onReadMore"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/colorAccent"
