--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,35 +8,20 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
 
-<!--        app:layout_behavior="@string/behavior_app_bar_layout"-->
-
-        <com.google.android.material.appbar.AppBarLayout
+        <com.example.testscroll.view.NestedScrollingDetailContainer
+            android:id="@+id/nested_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:elevation="0dp">
+            android:layout_height="match_parent">
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
+            <View
+                android:id="@+id/placeholder_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@color/colorPrimary"
-                app:contentInsetEnd="0dp"
-                app:contentInsetStart="0dp"
-                app:layout_scrollFlags="scroll|enterAlways">
-
-                <TextView
-                    android:text="Title Bar"
-                    android:gravity="center"
-                    android:textColor="#fff"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-            </androidx.appcompat.widget.Toolbar>
+                android:layout_height="50dp"/>
 
             <TextView
                 android:text="Banner Ads"
@@ -46,51 +31,52 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"/>
 
-        </com.google.android.material.appbar.AppBarLayout>
+            <com.example.testscroll.WebViewPager
+                android:id="@+id/view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
-        <!--        app:layout_behavior="@string/behavior_outer_frame_layout"-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@color/colorAccent"
+                android:gravity="center"
+                android:text="Read More"
+                android:textSize="20dp" />
 
-<!--        <com.example.testscroll.view.OuterFrameLayout-->
-<!--            app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content">-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="#f9f"
+                android:gravity="center"
+                android:text="Like and Share"
+                android:textSize="20dp" />
 
-        <com.example.testscroll.view.NestedScrollingDetailContainer
-            android:id="@+id/nested_container"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        <com.example.testscroll.WebViewPager
-            android:id="@+id/view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/colorAccent"
-            android:gravity="center"
-            android:text="Read More"
-            android:textSize="20dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="#f9f"
-            android:gravity="center"
-            android:text="Like and Share"
-            android:textSize="20dp" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:tag="nested_scroll_recycler_view" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:tag="nested_scroll_recycler_view" />
 
         </com.example.testscroll.view.NestedScrollingDetailContainer>
 
-<!--        </com.example.testscroll.view.OuterFrameLayout>-->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/colorPrimary"
+            app:contentInsetEnd="0dp"
+            app:contentInsetStart="0dp">
+
+            <TextView
+                android:text="Title Bar"
+                android:gravity="center"
+                android:textColor="#fff"
+                android:background="#c76"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/>
+
+        </androidx.appcompat.widget.Toolbar>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
@@ -99,7 +85,7 @@
             android:layout_marginBottom="20dp"
             android:layout_marginRight="20dp"/>
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </FrameLayout>
 
     <TextView
         android:id="@+id/textView"
