--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,23 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.testscroll.view.NestedScrollingDetailContainer
+<com.example.testscroll.view.NestedScrollDetailContainer
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/nested_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.example.testscroll.WebViewPager
+    <com.example.testscroll.view.NestedScrollWebViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
-    <TextView
-        android:id="@+id/read_more"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/colorAccent"
-        android:gravity="center"
-        android:text="Read More"
-        android:textSize="20dp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -25,7 +16,8 @@
         android:background="#f9f"
         android:gravity="center"
         android:text="Like and Share"
-        android:textSize="20dp" />
+        android:textColor="@color/white"
+        android:textSize="16dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_list"
@@ -33,4 +25,4 @@
         android:layout_height="wrap_content"
         android:tag="nested_scroll_recycler_view" />
 
-</com.example.testscroll.view.NestedScrollingDetailContainer>
+</com.example.testscroll.view.NestedScrollDetailContainer>
