--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -1,14 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#fff"
+    android:padding="15dp"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="wrap_content">
+
     <TextView
-        android:id="@+id/tv_item_text"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="item"
-        android:textSize="16sp"
+        android:id="@+id/title"
+        android:layout_width="200dp"
+        android:layout_height="18dp"
+        android:background="#DDD"
         android:textColor="#000"
-        android:gravity="center" />
-</LinearLayout>
+        android:textSize="16sp"
+        android:layout_marginTop="3dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:id="@+id/sub_title"
+        android:layout_width="120dp"
+        android:layout_height="18dp"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="#EEE"
+        android:layout_marginTop="10dp"
+        android:textColor="#000"
+        android:textSize="16sp" />
+
+    <View
+        android:layout_width="160dp"
+        android:layout_height="18dp"
+        app:layout_constraintTop_toBottomOf="@id/sub_title"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="#DDD"
+        android:layout_marginTop="10dp"
+        android:textColor="#000"
+        android:textSize="16sp" />
+
+    <FrameLayout
+        android:layout_width="120dp"
+        android:layout_height="80dp"
+        android:background="#CCC"
+        android:textColor="#000"
+        android:textSize="16sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:layout_gravity="center"
+            android:id="@+id/tv_item_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="item"
+            android:textSize="30sp"
+            android:textColor="#FFF"/>
+
+    </FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
