--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.testscroll.view.NestedScrollDetailContainer
+<com.example.testscroll.view.NestedScrollContainer
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/nested_container"
     android:layout_width="match_parent"
@@ -25,4 +25,4 @@
         android:layout_height="800dp"
         android:tag="nested_scroll_recycler_view" />
 
-</com.example.testscroll.view.NestedScrollDetailContainer>
+</com.example.testscroll.view.NestedScrollContainer>
